clase5/networkpolicy/np-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {} # all
  #podSelector:
  #  matchLabels:
  #    app: nginx
  policyTypes:
  - Ingress
  - Egress
