clase5/networkpolicy/np-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-from-vote-worker
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
    - Egress # al no definirse se deja sin salida
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: vote
      - podSelector:
          matchLabels:
            app: worker
      ports:
        - protocol: TCP
          port: 6379
