clase5/networkpolicy/np-worker-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-worker-app
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: []
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: redis
      ports:
        - protocol: TCP
          port: 6379
    - to:
      - podSelector:
          matchLabels:
            app: db
      ports:
        - protocol: TCP
          #port: 5431 # error
          port: 5432
    - to:
      - namespaceSelector: {}  # Permitir DNS, necesario para la resolución de nombres
      ports:
        - protocol: UDP
          port: 53
